--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
@@ -23,6 +23,9 @@
     <None Update="Config\Modules\mempool.xml.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Config\peerConfigSection.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="xunit.runner.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
