--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -82,5 +82,14 @@
                 }
             ]
         }
+    ,
+        {
+            "type": "Catalyst.Cli.Handlers.VerifyMessageResponseHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Node.Common.Interfaces.Messaging.IRpcResponseHandler, Catalyst.Node.Common"
+                }
+            ]
+        }
     ]
 }
