--- a/src/Catalyst.Cli/Catalyst.Cli.csproj
+++ b/src/Catalyst.Cli/Catalyst.Cli.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
     <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
