--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -34,7 +34,7 @@
             ]
         },
         {
-            "type": "Catalyst.Common.Rpc.RpcCorrelationCacheBase, Catalyst.Common",
+            "type": "Catalyst.Common.Rpc.RpcCorrelationCache, Catalyst.Common",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageCorrelationCache, Catalyst.Common"
