--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -167,6 +167,15 @@
                 {
                     "type": "Catalyst.Common.Interfaces.FileSystem.IFileSystem, Catalyst.Common"
                 }
+            ],
+            "instanceScope": "single-instance"
+        },
+        {
+            "type": "Catalyst.Common.FileSystem.FileTransfer, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.FileSystem.IFileTransfer, Catalyst.Common"
+                }
             ]
         }
     ],
