--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -34,7 +34,7 @@
             ]
         },
         {
-            "type": "Catalyst.Common.Rpc.RpcCorrelationCacheBase, Catalyst.Common",
+            "type": "Catalyst.Common.Rpc.RpcCorrelationCache, Catalyst.Common",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageCorrelationCache, Catalyst.Common"
@@ -116,6 +116,14 @@
         },
         {
             "type": "Catalyst.Cli.Handlers.VerifyMessageResponseHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Handlers.PeerListResponseHandler, Catalyst.Cli",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
