--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -173,7 +173,7 @@
             "type": "Catalyst.Node.Core.Modules.FileTransfer.FileTransfer",
             "services": [
                 {
-                    "type": "Catalyst.Node.Core.Modules.FileTransfer.IFileTransfer"
+                    "type": "Catalyst.Common.Interfaces.FileTransfer.IFileTransfer, Catalyst.Common"
                 }
             ],
             "instanceScope": "singleinstance"
