221 put file on dfs via rpc (#346)
* Initial Commit

* Added DFS Response Handler

* Added file to dfs messages to RPC factory

* Start of chunking when transfering file

* Added chunking File transfer logic

* Fixed chunk size

* Fixed FileTransfer timeout

* Limited maximum amount of chunks

* Update File sending to node

* Fix percentage calculation

* Add file to IPFS on transfer success

* Refractor File transfer

* Format Shell.cs

* Fixed event handling

* Format AddFileToDfsResponseHandler and RpcMessageFactory

* Modified user output messages to use IUserOutput

* Fixed IDispose implementation

* Add license header

* Update submodule

* Format Options

* Refactored interfaces and check IPFS file integrity

* Fix RpcMessages Numbering

* Update FileTransferNodeTests.cs

* Added missing license

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -123,6 +123,22 @@
             ]
         },
         {
+            "type": "Catalyst.Cli.Handlers.AddFileToDfsResponseHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Handlers.TransferFileBytesResponseHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Cli.Handlers.PeerListResponseHandler, Catalyst.Cli",
             "services": [
                 {
@@ -145,6 +161,15 @@
                     "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
                 }
             ]
+        },
+        {
+            "type": "Catalyst.Cli.FileTransfer.CliFileTransfer, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.FileTransfer.ICliFileTransfer, Catalyst.Common"
+                }
+            ],
+            "instanceScope": "singleinstance"
         }
     ]
 }
