clean up and refactor shell to use partials for commands

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -42,7 +42,7 @@
             ]
         },
         {
-            "type": "Catalyst.Cli.Shell",
+            "type": "Catalyst.Cli.Commands.Commands",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Cli.IAdvancedShell, Catalyst.Common"
