--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -147,6 +147,14 @@
             ]
         },
         {
+            "type": "Catalyst.Cli.Handlers.PeerReputationResponseHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Cli.Handlers.PeerCountResponseHandler, Catalyst.Cli",
             "services": [
                 {
