hook BuildAskMessage into registering a PendingRequest in the CorrelationCache

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -39,7 +39,8 @@
                 {
                     "type": "Catalyst.Common.Interfaces.IO.Messaging.IReputableCache, Catalyst.Common"
                 }
-            ]
+            ],
+            "instanceScope": "singleinstance"
         },
         {
             "type": "Catalyst.Node.Core.P2P.PeerClientFactory",
