--- a/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
+++ b/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
@@ -27,7 +27,7 @@
   <ItemGroup>
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.10.1" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
