--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -6,27 +6,28 @@
   </PropertyGroup>
   <Import Project="../Common.Projects.props" />
   <ItemGroup>
+    <PackageReference Include="Catalyst.Cryptography.BulletProofs.Wrapper" Version="0.0.1.3866-beta" />
     <PackageReference Include="Ipfs.Api" Version="0.23.6" />
-    <PackageReference Include="Ipfs.Engine" Version="0.3.0" />
+    <PackageReference Include="Ipfs.Engine" Version="0.7.2" />
     <PackageReference Include="Polly" Version="7.1.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
     <PackageReference Include="Dawn.Guard" Version="1.8.0" />
     <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Serilog" Version="2.8.0" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.3" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
     <PackageReference Include="libsodium" Version="[1.0.17]" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
-    <PackageReference Include="System.IO.Abstractions" Version="3.1.1" />
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="3.1.1" />
+    <PackageReference Include="System.IO.Abstractions" Version="4.2.8" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="4.2.8" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.1.3" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.5" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
-    <PackageReference Include="Grpc.Tools" Version="1.19.0" PrivateAssets="All">
+    <PackageReference Include="Grpc.Tools" Version="1.20.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
