--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -224,6 +224,12 @@
             "parameters": {
                 "configFilePath": "Config/Modules/mempool.json"
             }
+        },
+        {
+            "type": "Catalyst.Node.Core.Modules.JsonConfiguredModule",
+            "parameters": {
+                "configFilePath": "Config/Modules/account.json"
+            }
         }
     ]
 }
