--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
     <PackageReference Include="DotNetty.Common" Version="0.6.0" />
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
+    <PackageReference Include="Gstc.Collections.Observable" Version="0.1.1-alpha" />
     <PackageReference Include="Ipfs.Core" Version="0.41.0" />
     <PackageReference Include="Ipfs.Engine" Version="0.7.2" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
